--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
+    "@date-io/moment": "^2.11.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/lab": "^5.0.0-alpha.62",
+    "@mui/material": "^5.2.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,10 +18,14 @@
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-date-picker": "^8.3.6",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-time-picker": "^4.4.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
