--- a/package.json
+++ b/package.json
@@ -7,7 +7,41 @@
     "nodemailer": "^6.7.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.0.8",
-    "react-bootstrap-icons": "^1.7.2"
+    "react-bootstrap-icons": "^1.7.2",
+    "@date-io/date-fns": "^2.11.0",
+    "@date-io/moment": "^2.11.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/lab": "^5.0.0-alpha.62",
+    "@mui/material": "^5.2.6",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^10.0.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-date-picker": "^8.3.6",
+    "react-datepicker": "^4.5.0",
+    "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "react-time-picker": "^4.4.4",
+    "web-vitals": "^2.1.2",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "moment": "^2.29.1",
+    "mongoose": "^6.1.3",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {},
   "scripts": {
