change start script uri

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node /backend/index.js"
+    "start": "node ./backend/index.js"
   },
   "repository": {
     "type": "git",
