--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sgbadmintonstop",
   "version": "1.0.0",
   "description": "",
-  "main": "./backend/index.js",
+  "main": "backend/index.js",
   "dependencies": {
     "nodemailer": "^6.7.2",
     "react-icons": "^4.3.1",
@@ -46,7 +46,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./backend/index.js"
+    "start": "nodemon backend/index.js"
   },
   "repository": {
     "type": "git",
