--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URL = mongodb+srv://josephlai_mdb:qwer1234@cluster0.hjxan.mongodb.net/myFi
 HOST = smtp.gmail.com
 USER = badstophelp@gmail.com
 PASS = crazybugman123
+PORT=5000
