--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,8 @@
 REACT_APP_BASE_URL = https://sgbadmintonstop.herokuapp.com/
+REACT_APP_API_KEY = AIzaSyDoPTMaT8g4akreRvJ9BLxYjZkKRwIitE0
+REACT_APP_AUTH_DOMAIN = sgbadmintonstop-7da0c.firebaseapp.com
+REACT_APP_PROJECT_ID = sgbadmintonstop-7da0c
+REACT_APP_STORAGE_BUCKET = sgbadmintonstop-7da0c.appspot.com
+REACT_APP_MESSAGING_SENDER_ID = 1096100706027
+REACT_APP_APP_ID = 1:1096100706027:web:2de1a3611b1011dce230ae
+REACT_APP_MEASUREMENT_ID = G-X7Q489B66Y
