--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
+    "firebase": "^9.8.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-bootstrap-date-picker": "^5.1.0",
